--- a/index.html
+++ b/index.html
@@ -11,19 +11,11 @@
     <main>
       <h1>Online Counter App</h1>
       <p>Click '+' or '-' to count:</p>
+      <div id="counter-container"></div>
     </main>
-    <div class="calculator">
-      <button type="submit">
-        -
-      </button>
-      <input type="text" placeholder="0"/>
-      <button type="submit">
-        +
-      </button>
-    </div>
     <article>
       <h2>Instructions:</h2>
-      <p>You can insert every number you'd like, both negative and positive, to infinite and beyond.
+      <p>You can insert every number you'd like, both negative and positive, to infinity and beyond.
         <br>Go crazy.         
       </p>
     </article>
